# defense-bot

./: .dockerignore  .env.example  .gitignore  README.md  docker-compose.yml  install.sh  main.py  pyproject.toml
backend/: Dockerfile  database.py  main.py  models.py  requirements.txt  schemas.py  seed.py
backend/services/: generator.py
backend/templates/: defense_template.pptx
data/: locations.csv  professors.csv  students.csv
docs/: API.md  SCHEMA.md  UI_UX.md
workflow/: Defense PPT Agent.yml
