[project]
name = "defense-bot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.133.1",
    "pydantic>=2.12.5",
    "python-dotenv>=1.2.1",
    "python-pptx>=1.0.2",
    "requests>=2.32.5",
    "sqlalchemy>=2.0.47",
    "uvicorn>=0.41.0",
]
